--- a/speed-and-distance.Rmd
+++ b/speed-and-distance.Rmd
@@ -1,5 +1,10 @@
 ---
 title: "EuropePopulationMap"
+knit: (function(input_file, encoding) {
+  out_dir <- 'docs';
+  rmarkdown::render(input_file,
+ encoding=encoding,
+ output_file=file.path(dirname(input_file), out_dir, 'index.html'))})
 author: "Felipe Allegretti"
 date: "4/24/2020"
 output: html_document
